# dott

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  llms.txt
.github/workflows/: release.yml
Formula/: dott.rb
src/: main.rs
