[package]
name = "dott"
version = "0.6.1"
edition = "2024"
description = "Private domain availability checker. RDAP, WHOIS, and DNS — no middlemen, no tracking."
license = "MIT"
repository = "https://github.com/yodatoshicom/dott"
homepage = "https://github.com/yodatoshicom/dott"
keywords = ["domain", "whois", "rdap", "dns", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
